Updated tests to make more stable

--- a/ObjectRepo.properties
+++ b/ObjectRepo.properties
@@ -3,7 +3,7 @@ shopmen://*[contains(@data-link-text,'SHOP MEN')]
 tops://*[contains(@data-link-text,'SHOP TOPS')]
 selectitem:/html/body/div[3]/div[3]/div[1]/div[2]/div/div[2]/div/div[1]/div[3]/a/div/picture/img
 sizechart:/html/body/div[3]/div[3]/div/div[2]/div[1]/div[1]/div/div/div[2]/div/div[7]/a[1]
-sizedropdown:.caret
+sizedropdown:/html/body/div[3]/div[3]/div/div[2]/div[1]/div[1]/div/div/div[2]/div/div[8]/div/div[1]/div[1]/div
 selectsize:/html/body/div[3]/div[3]/div/div[2]/div[1]/div[1]/div/div/div[2]/div/div[8]/div/div[1]/div[1]/ul/li[3]/a
 addtobag:/html/body/div[3]/div[3]/div/div[2]/div[1]/div[1]/div/div/div[2]/div/div[9]/button
 viewbag:/html/body/div[4]/div[1]/div/div/div[2]/div[3]/button[2]
